Update Новини “заголовок-2”

--- a/data/news/заголовок-2.md
+++ b/data/news/заголовок-2.md
@@ -2,13 +2,8 @@
 title: Акція на професійну чистку зубів у листопаді
 date: 2025-11-12T04:15:00.000+03:00
 author: Дентіс
-category: Професійний розвиток
-description: 
-slug: "111"
-
+category: Акції
+description: null
+slug: '111'
 ---
-
-
-
-
 Протягом усього місяця діє спеціальна пропозиція — професійна чистка зубів із 20% знижкою. Подбайте про здоров’я та красу своєї усмішки, записавшись на прийом уже сьогодні!
