Update Новини “заголовок-2”

--- a/data/news/заголовок-2.md
+++ b/data/news/заголовок-2.md
@@ -2,7 +2,7 @@
 title: Акція на професійну чистку зубів у листопаді
 date: 2025-11-12T04:15:00.000+03:00
 author: Дентіс
-category: Акції
+category: Професійний розвиток
 description: null
 slug: '111'
 ---
