--- a/data/news/2025-10-16-заголовок.md
+++ b/data/news/2025-10-16-заголовок.md
@@ -2,7 +2,7 @@
 title: Нове обладнання для безболісного лікування
 date: 2025-11-11T02:30:00.000+03:00
 author: Дентіс
-category: оновлення
+category: Оновлення
 description:
 slug: "111"
 ---
